--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,33 @@
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<h1>Instructor Account Signup</h1>
+<p>Please fill in your information below</p>
 
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
+<hr/>
+
+
+<%= form_for @user do |f| %>
+
+	<div class="span6">
+
+		<% unless f.object.errors.empty? %>
+			<div class="alert alert-error">
+				<strong>Try again after fixing the following things:</strong><br/>
+				<ul>
+					<% f.object.errors.full_messages.each do |msg| %>
+						<li><%= msg %></li>
+					<% end %>
+				</ul>
+			</div>
+		<% end %>
+
+		<%= f.text_field :first_name, placeholder: "First Name", class: "input-block-level" %>
+		<%= f.text_field :last_name, placeholder: "Last Name", class: "input-block-level" %>
+
+		<%= f.text_field :email, placeholder: "E-mail Address", class: "input-block-level" %>
+		<%= f.password_field :password, placeholder: "Password", class: "input-block-level" %>
+
+		<div class="form-actions">
+			<%= f.submit 'Create Account', class: 'btn btn-primary' %>
+		</div>
+	</div>
+
 <% end %>
