--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,6 @@
 
 <hr/>
 
-
 <%= form_for @user do |f| %>
 
 	<div class="span6">
@@ -21,8 +20,7 @@
 
 		<%= f.text_field :first_name, placeholder: "First Name", class: "input-block-level" %>
 		<%= f.text_field :last_name, placeholder: "Last Name", class: "input-block-level" %>
-
-		<%= f.text_field :email, placeholder: "E-mail Address", class: "input-block-level" %>
+		@<%= f.text_field :thandle, placeholder: "Twitter Handle", class: "input-block-level" %>
 		<%= f.password_field :password, placeholder: "Password", class: "input-block-level" %>
 
 		<div class="form-actions">
