--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,22 @@
 </head>
 <body>
 
+<div class="navbar ">
+  <div class="navbar-inner">
+    <div class="logo">
+      <a href="#" class = "question">+ New Question</a>
+        <div class="login">
+          <% if current_user %>
+            Signed in as <span class='bit'><%= current_user.name %></span> <%= link_to "Sign out", signout_path %>
+          <% else %>
+            <%= link_to "Sign in with Twitter", "/auth/twitter" %>
+          <% end %>
+        </div>
+      <h1 class = "title"><span class = "bit">Bit</span>Query</h1>
+   </div>
+  </div>
+</div>
+
 <%= yield %>
 
 </body>
