--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Tweets#new</h1>
-<p>Find me in app/views/tweets/new.html.erb</p>
+<h3>Tweet your question!</h3>
+<%= form_for (@tweet) do |tweet_form| %>
+  <%= tweet_form.text_field :content, placeholder: "Don't forget the lesson hashtag! eg. #regex", class: "input-block-level" %>
+  <%= tweet_form.submit 'Submit Tweet', class: 'btn btn-primary' %>
+<% end %>
