--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bitquery</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<div class="navbar ">
-  <div class="navbar-inner">
-    <div class="logo">
-      <a href= <%= new_tweet_path %> class = "question"><span id="plus">+</span> New Question</a>
+  <head>
+    <title>Bitquery</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  
+  <body>
+    <div class="navbar ">
+      <div class="navbar-inner">
+<!--         <a href="#myModal"data-toggle="modal"> -->
+        <a href= <%= new_tweet_path %> class="question" data-toggle="modal"><span id="plus">+</span> New Question</a>
         <div class="login">
           <% if current_user %>
             Signed in as <span class='bit'><%= current_user.name %></span> <%= link_to "Sign out", signout_path %>
@@ -19,12 +19,14 @@
             <%= link_to "Sign in with Twitter", "/auth/twitter" %>
           <% end %>
         </div>
-      <h1 class = "title"><a href="/"><span class = "bit">Bit</span>Query</a></h1>
-   </div>
-  </div>
-</div>
+        <div class="logo">    
+          <h1 class = "title"><a href="/"><span class = "bit">Bit</span>Query</a></h1>
+       </div>
+      </div>
+    </div>
 
-<%= yield %>
+    <%= yield %>
 
-</body>
+    
+  </body>
 </html>
