Adding javascript modal to application.html.erb. Still figuring out how to change this into a 'content_for' tag and yeilding modal from new.html.erb. Making slight changes to css for modal.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,8 @@
  *= require 'bootstrap'
  *= require 'home'
  */
+
+ /* For some reason my HTML background would not change. This is a TEMPORARY fix. */
+ html {
+  background-color: #EEE;
+ }
